cambiato la seconda sezione , aggiunto liste di case registrate

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                     </h1>
                     <p class="my-3">Lorem ipsum dolor sit amet consectetur. Purus phasellus sit duis.</p>
                     <div class="d-flex gap-2">
-                        <a href="#" class="btn btn-secondary">CTA secondaria</a>
-                        <label for="configurator-toggle" class="btn btn-sm btn-dark ms-3" style="margin-bottom: 0;">Main
+                        <label for="" class="btn btn-sm btn-dark ms-3" style="margin-bottom: 0;">Main
                             CTA</label>
 
 
@@ -66,17 +65,82 @@
     <section class="py-5 bg-light">
         <div class="container">
             <div class="row align-items-center g-4">
-                <div class="col-md-6">
-                    <div class="bg-white border rounded p-5 text-center">
-                        <img src="https://via.placeholder.com/300x200" alt="Problema esempio" class="img-fluid">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card h-100 shadow-sm">
+                        <img src="https://via.placeholder.com/400x250?text=Casa+1" class="card-img-top" alt="Casa 1">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Villa Roma</h5>
+                            <p class="card-text text-muted mb-2">Via Colosseo 12, Roma</p>
+                            <ul class="list-unstyled small mb-3">
+                                <li>3 camere · 2 bagni</li>
+                                <li>120 m²</li>
+                                <li>Giardino privato</li>
+                            </ul>
+                            <div class="mt-auto d-flex justify-content-between align-items-center">
+                                <span class="fw-bold text-success">€ 350.000</span>
+                                <a href="#" class="btn btn-sm btn-primary">Dettagli</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h2>Hai per caso questo problema?</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Purus phasellus.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur. Purus phasellus sit duis.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur phasellus sit duis.</p>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card h-100 shadow-sm">
+                        <img src="https://via.placeholder.com/400x250?text=Casa+2" class="card-img-top" alt="Casa 2">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Attico Milano</h5>
+                            <p class="card-text text-muted mb-2">Corso Buenos Aires, Milano</p>
+                            <ul class="list-unstyled small mb-3">
+                                <li>2 camere · 1 bagno</li>
+                                <li>85 m²</li>
+                                <li>Terrazza panoramica</li>
+                            </ul>
+                            <div class="mt-auto d-flex justify-content-between align-items-center">
+                                <span class="fw-bold text-success">€ 420.000</span>
+                                <a href="#" class="btn btn-sm btn-primary">Dettagli</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card h-100 shadow-sm">
+                        <img src="https://via.placeholder.com/400x250?text=Casa+3" class="card-img-top" alt="Casa 3">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Appartamento Torino</h5>
+                            <p class="card-text text-muted mb-2">Piazza Castello, Torino</p>
+                            <ul class="list-unstyled small mb-3">
+                                <li>4 locali · 2 bagni</li>
+                                <li>140 m²</li>
+                                <li>Vicino ai servizi</li>
+                            </ul>
+                            <div class="mt-auto d-flex justify-content-between align-items-center">
+                                <span class="fw-bold text-success">€ 295.000</span>
+                                <a href="#" class="btn btn-sm btn-primary">Dettagli</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="card h-100 shadow-sm">
+                        <img src="https://via.placeholder.com/400x250?text=Casa+4" class="card-img-top" alt="Casa 4">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Rustico Toscana</h5>
+                            <p class="card-text text-muted mb-2">Loc. San Martino, Toscana</p>
+                            <ul class="list-unstyled small mb-3">
+                                <li>5 camere · 3 bagni</li>
+                                <li>200 m²</li>
+                                <li>Terreno 1 ha</li>
+                            </ul>
+                            <div class="mt-auto d-flex justify-content-between align-items-center">
+                                <span class="fw-bold text-success">€ 680.000</span>
+                                <a href="#" class="btn btn-sm btn-primary">Dettagli</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
             </div>
         </div>
     </section>
