copiato il branch di lo gioco

--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center">
                 
-                <a class="text-lg font-bold text-gray-900" href="#">Logo</a>
+                <a class="text-lg font-bold text-gray-900" href="#">logo</a>
                 
                 <div class="hidden lg:flex lg:ml-auto"> 
                     <ul class="flex space-x-6 items-center">
