--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -576,7 +576,7 @@
                 </div>
                 <div class="text-center">
                     <img src="./assets/process.png" alt="Approfondimento"
-                        class="w-full h-[220px] md:h-[320px] object-cover object-center rounded-lg shadow-xl mx-auto">
+                        class="w-full h-[220px] md:h-[320px] object-cover object-center rounded-lg mx-auto">
                 </div>
             </div>
         </div>
