navbar: testi aggiornati

--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -81,13 +81,13 @@
                 <div class="hidden lg:flex lg:ml-auto">
                     <ul class="flex space-x-6 items-center">
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">VOCE MENU</a></li>
+                                href="#">Home</a></li>
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">VOCE MENU</a></li>
+                                href="#">Servizi</a></li>
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">VOCE MENU</a></li>
+                                href="#">Domande frequenti</a></li>
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">VOCE MENU</a></li>
+                                href="#">Contatti</a></li>
 
                         <!-- Bottone che apre la modale  -->
                         <li>
@@ -713,9 +713,9 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
                     <img src="https://placehold.co/120x40/FFFFFF/111A19?text=Logo+White" alt="Logo" class="mb-3">
-                    <p class="text-gray-300">Il nostro core buisness è impegnarci ogni giorno per offrire soluzioni di
-                        qualità
-                        ai nostri clienti.</p>
+                    <p class="text-gray-300">Immobiliaris è parte del Gruppo Indomus. La nostra agenzia si impegna ogni
+                        giorno per offrire soluzioni di compravendita di qualità, con particolare attenzione alla
+                        velocità e alla massima valorizzazione del tuo immobile.</p>
                 </div>
 
                 <div>
