--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -721,15 +721,18 @@
                 <div>
                     <h5 class="text-xl font-bold mb-3">Link Utili</h5>
                     <ul class="list-none space-y-1">
-                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Hero</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Home</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Servizi</a>
                         </li>
-                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">benefit</a>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Valutazione gratuita</a>
                         </li>
                         <li><a href="#"
-                                class="text-gray-300 hover:text-my-orange transition duration-150">contattaci</a>
+                                class="text-gray-300 hover:text-my-orange transition duration-150">Chi siamo</a>
                         </li>
-                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">partners</a>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Contatti</a>
+                        </li>
+                        </li>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Privacy & Cookie Policy</a>
                         </li>
                     </ul>
                 </div>
