--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -81,13 +81,13 @@
                 <div class="hidden lg:flex lg:ml-auto">
                     <ul class="flex space-x-6 items-center">
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">Home</a></li>
+                                href="#home">Home</a></li>
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">Servizi</a></li>
+                                href="#servizi">Servizi</a></li>
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">Domande frequenti</a></li>
+                                href="#faq">Domande frequenti</a></li>
                         <li class="nav-item"><a class="text-gray-600 hover:text-my-green-dark transition duration-150"
-                                href="#">Contatti</a></li>
+                                href="#contatti">Contatti</a></li>
 
                         <!-- Bottone che apre la modale  -->
                         <li>
@@ -106,7 +106,7 @@
 
 
 
-    <section class="py-16 md:py-24 bg-gray-50">
+    <section id="home" class="py-16 md:py-24 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-2 items-start gap-8 md:gap-12">
 
@@ -502,7 +502,7 @@
         </div>
     </section>
 
-    <section class="py-16">
+    <section id="servizi" class="py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-bold mb-2 text-my-black">Cosa ottieni affidandoti a noi</h2>
             <p class="text-gray-600 mb-1">Lavoriamo nel settore immobiliare da piu di 50 anni e abbiamo le soluzioni ai
@@ -548,7 +548,7 @@
                         mettiamo tecnologia avanzata e professionisti esperti al tuo servizio, così puoi prendere
                         decisioni consapevoli senza stress o imprevisti.
                     </p>
-                    <a href="#"
+                    <a href="#home"
                         class="py-3 px-6 font-semibold rounded-lg bg-white text-my-black hover:bg-gray-200 transition duration-150">Richiedi
                         una consulenza gratuita</a>
                 </div>
@@ -647,7 +647,7 @@
 
 
 
-    <section class="py-16 bg-white">
+    <section id="faq" class="py-16 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h3 class="text-3xl font-bold mb-6 text-my-black">Le domande più frequenti</h3>
 
