modificato cards carosello

--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -379,12 +379,12 @@
                                 <div class="text-center mt-4">
                                     <p class="text-sm text-gray-600">Stima Immobiliare</p>
                                     <p class="text-2xl font-bold" style="color: #BA6830;">246.000€</p>
-                                    <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
+                                    <!-- <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
                                         <div class="absolute h-1 rounded-full"
                                             style="background-color: #274239; width: 50%;"></div>
                                         <div class="absolute w-4 h-4 rounded-full -top-1.5 left-1/2 transform -translate-x-1/2"
                                             style="background-color: #274239;"></div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -412,13 +412,13 @@
                                 <div class="text-center mt-4">
                                     <p class="text-sm text-gray-600">Stima Immobiliare</p>
                                     <p class="text-2xl font-bold" style="color: #BA6830;">415.000€</p>
-                                    <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
+                                    <!-- <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
                                         <div class="absolute h-1 rounded-full"
                                             style="background-color: #274239; width: 73%;"></div>
                                         <div class="absolute w-4 h-4 rounded-full -top-1.5"
                                             style="left: 73%; transform: translateX(-50%); background-color: #274239;">
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -446,13 +446,13 @@
                                 <div class="text-center mt-4">
                                     <p class="text-sm text-gray-600">Stima Immobiliare</p>
                                     <p class="text-2xl font-bold" style="color: #BA6830;">415.000€</p>
-                                    <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
+                                    <!-- <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
                                         <div class="absolute h-1 rounded-full"
                                             style="background-color: #274239; width: 73%;"></div>
                                         <div class="absolute w-4 h-4 rounded-full -top-1.5"
                                             style="left: 73%; transform: translateX(-50%); background-color: #274239;">
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -480,13 +480,13 @@
                                 <div class="text-center mt-4">
                                     <p class="text-sm text-gray-600">Stima Immobiliare</p>
                                     <p class="text-2xl font-bold" style="color: #BA6830;">310.000€</p>
-                                    <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
+                                    <!-- <div class="h-1 bg-gray-200 rounded-full mt-4 relative">
                                         <div class="absolute h-1 rounded-full"
                                             style="background-color: #274239; width: 65%;"></div>
                                         <div class="absolute w-4 h-4 rounded-full -top-1.5"
                                             style="left: 65%; transform: translateX(-50%); background-color: #274239;">
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
