--- a/immobiliaris-be/src/main/resources/static/account.html
+++ b/immobiliaris-be/src/main/resources/static/account.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Area Personale - Immobiliaris</title>
   <link href="styles/style-tailwind.css" rel="stylesheet">
+  <script src="js/auth-utils.js"></script>
+  <script src="js/user.js" defer></script>
   <style>
     .card-dim { opacity: 0.45; transform: scale(0.98); }
     .immobile-card { position: relative; overflow: hidden; transition: transform 0.3s ease, box-shadow 0.3s ease; }
@@ -19,11 +21,18 @@
 
     <!-- Sidebar sinistra -->
     <aside class="bg-gray-200 w-full lg:w-80 p-8 flex flex-col items-center lg:items-start">
-      <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center shadow-md mb-6"></div>
+      <div class="w-40 h-40 rounded-full bg-white flex items-center justify-center shadow-md mb-6">
+        <span id="user-initials" class="text-4xl font-bold text-my-green-dark"></span>
+      </div>
+      <div class="mb-4 text-center lg:text-left">
+        <h2 id="user-name" class="text-xl font-bold text-gray-800"></h2>
+        <p id="user-email" class="text-sm text-gray-600"></p>
+      </div>
       <nav class="space-y-4 w-full lg:w-auto">
         <a href="#" class="block text-gray-700 hover:text-gray-900">Profilo</a>
         <a href="#" class="block text-gray-700 hover:text-gray-900">Valutazioni</a>
         <a href="#" class="block text-gray-700 hover:text-gray-900">Impostazioni</a>
+        <a href="#" id="logout-btn" class="block text-red-600 hover:text-red-800 font-semibold">Logout</a>
       </nav>
     </aside>
 
@@ -36,36 +45,18 @@
       <hr class="mb-8 border-gray-300">
 
       <!-- Stato valutazione -->
-      <h2 class="text-xl font-semibold mb-6">Stato della valutazione:</h2>
-      <div class="flex flex-col lg:flex-row gap-6 mb-8">
-        <div class="flex-1 bg-white p-6 shadow-lg rounded-xl">
-          <h3 class="font-semibold text-lg mb-2">Valutazione inviata</h3>
-          <p class="text-gray-600 mb-4">La tua valutazione è stata inviata correttamente ed è in lavorazione.</p>
-          <span class="inline-block px-3 py-1 bg-green-600 text-white rounded-full text-sm">Selezionato</span>
-        </div>
-        <div class="flex-1 bg-white p-6 rounded-xl shadow-md card-dim">
-          <h3 class="font-semibold text-lg mb-2">Bozza</h3>
-          <p class="text-gray-600">Hai una bozza incompleta.</p>
-        </div>
-        <div class="flex-1 bg-white p-6 rounded-xl shadow-md card-dim">
-          <h3 class="font-semibold text-lg mb-2">Scaduta</h3>
-          <p class="text-gray-600">Valutazione scaduta o non valida.</p>
+      <h2 class="text-xl font-semibold mb-6">Le tue valutazioni:</h2>
+      <div id="valutazioni-container" class="mb-8">
+        <div class="text-center py-8 text-gray-500">
+          <p>Caricamento in corso...</p>
         </div>
       </div>
 
-      <!-- Immobile in corso di valutazione -->
-      <h2 class="text-xl font-semibold mt-8 mb-4">Immobile in corso di valutazione:</h2>
-      <div class="immobile-card bg-white p-6 rounded-2xl shadow-lg w-full max-w-3xl relative">
-        <div class="flex flex-wrap gap-6">
-          <div><p class="text-gray-500 text-sm">Superficie</p><p class="font-semibold text-lg">120 m²</p></div>
-          <div><p class="text-gray-500 text-sm">Locali</p><p class="font-semibold text-lg">4</p></div>
-          <div><p class="text-gray-500 text-sm">Bagni</p><p class="font-semibold text-lg">2</p></div>
-          <div><p class="text-gray-500 text-sm">Piano</p><p class="font-semibold text-lg">3°</p></div>
-          <div><p class="text-gray-500 text-sm">Indirizzo</p><p class="font-semibold text-lg">Via Roma 24, Milano</p></div>
-        </div>
-        <div class="immobile-overlay rounded-2xl">
-          <p class="text-lg mb-2">Valutazione fatta in data <strong>11 Novembre</strong></p>
-          <p class="text-sm opacity-90">Il preventivo sarà pronto tra <strong>12 ore</strong></p>
+      <!-- Immobili valutati -->
+      <h2 class="text-xl font-semibold mt-8 mb-4">I tuoi immobili:</h2>
+      <div id="immobili-container" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <div class="text-center py-8 text-gray-500 col-span-full">
+          <p>Caricamento in corso...</p>
         </div>
       </div>
 
