--- a/immobiliaris-be/src/main/resources/static/admin.html
+++ b/immobiliaris-be/src/main/resources/static/admin.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Immobiliaris</title>
     <link href="styles/style-tailwind.css" rel="stylesheet">
+    <script src="js/auth-utils.js"></script>
+    <script src="js/admin.js" defer></script>
     <style>
         .card-admin {
             transition: all 0.25s ease;
@@ -37,15 +39,20 @@
         <!-- Sidebar -->
         <aside id="sidebar" class="hidden lg:flex lg:flex-col bg-gray-900 text-white w-64 p-6">
             <div class="text-2xl font-bold mb-10">Immobiliaris</div>
+            <div class="mb-6 pb-4 border-b border-gray-700">
+                <p id="admin-name" class="text-sm font-semibold text-gray-300">Admin</p>
+                <p id="admin-email" class="text-xs text-gray-500"></p>
+            </div>
             <nav class="space-y-4 flex-1">
                 <a href="#" class="block text-gray-300 hover:text-white transition">🏠 Dashboard</a>
                 <a href="#" class="block text-gray-300 hover:text-white transition">👤 Utenti</a>
                 <a href="#" class="block text-gray-300 hover:text-white transition">🏘️ Valutazioni</a>
                 <a href="#" class="block text-gray-300 hover:text-white transition">🗃️ preventivi completati</a>
             </nav>
+            <a id="logout-btn" href="#"
+                class="block mt-4 text-red-400 hover:text-red-300 text-sm border-t border-gray-700 pt-4">🚪 Logout</a>
             <a href="index.html"
-                class="block mt-8 text-gray-400 hover:text-white text-sm border-t border-gray-700 pt-4">⬅ Torna al
-                sito</a>
+                class="block mt-2 text-gray-400 hover:text-white text-sm">⬅ Torna al sito</a>
         </aside>
 
         <!-- Contenuto principale -->
@@ -70,17 +77,17 @@
                     <div class="text-right text-3xl font-bold text-my-green-dark">124</div>
                 </div>
                 <div class="card-admin bg-white p-6 rounded-xl shadow-md cursor-pointer flex flex-col justify-between"
-                    data-type="case">
+                    data-type="immobili">
                     <div>
-                        <h3 class="text-lg font-semibold mb-2">Case in Valutazione</h3>
+                        <h3 class="text-lg font-semibold mb-2">Immobili</h3>
                         <p class="text-gray-600 text-sm mb-4">Controlla gli immobili in attesa di preventivo</p>
                     </div>
                     <div class="text-right text-3xl font-bold text-my-green-dark">32</div>
                 </div>
                 <div class="card-admin bg-white p-6 rounded-xl shadow-md cursor-pointer flex flex-col justify-between"
-                    data-type="preventivi">
+                    data-type="valutazioni">
                     <div>
-                        <h3 class="text-lg font-semibold mb-2">Preventivi Completati</h3>
+                        <h3 class="text-lg font-semibold mb-2">Valutazioni</h3>
                         <p class="text-gray-600 text-sm mb-4">Consulta gli ultimi preventivi generati</p>
                     </div>
                     <div class="text-right text-3xl font-bold text-my-green-dark">89</div>
