--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -165,6 +165,23 @@
                                             <input type="password" id="password" required
                                                 class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-my-orange focus:border-transparent">
                                         </div>
+
+                                        <div class="bg-my-cream p-4 rounded-lg border border-my-orange">
+                                            <label class="block text-sm font-semibold text-gray-800 mb-3">Sei il proprietario dell'immobile? *</label>
+                                            <div class="space-y-2">
+                                                <label class="flex items-center cursor-pointer">
+                                                    <input type="radio" name="isProprietario" id="proprietario-si" value="true" required
+                                                        class="w-4 h-4 text-my-orange focus:ring-my-orange border-gray-300">
+                                                    <span class="ml-2 text-sm text-gray-700">Sì, sono il proprietario e voglio vendere</span>
+                                                </label>
+                                                <label class="flex items-center cursor-pointer">
+                                                    <input type="radio" name="isProprietario" id="proprietario-no" value="false"
+                                                        class="w-4 h-4 text-my-orange focus:ring-my-orange border-gray-300">
+                                                    <span class="ml-2 text-sm text-gray-700">No, sto richiedendo la valutazione per qualcun altro</span>
+                                                </label>
+                                            </div>
+                                            <p class="text-xs text-gray-500 mt-2">Questa informazione ci aiuta a gestire meglio la tua richiesta</p>
+                                        </div>
                                     </div>
 
                                     <div class="mt-6 flex justify-end">
