--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -28,12 +28,12 @@
     <div class="bg-my-green-dark text-my-cream text-xs py-2.5">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-between items-center">
             <div class="flex items-center space-x-6">
-                <a href="mailto:info@immobiliaris.it" class="flex items-center hover:text-white transition-colors">
+                <a href="mailto:immobiliarishelp@gmail.com" class="flex items-center hover:text-white transition-colors">
                     <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                    <span class="hidden sm:inline">info@immobiliaris.it</span>
+                    <span class="hidden sm:inline">immobiliarishelp@gmail.com</span>
                 </a>
                 <a href="tel:+39011123456" class="flex items-center hover:text-white transition-colors">
                     <svg class="w-4 h-4 mr-2 opacity-80" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -1107,9 +1107,9 @@
                 <div class="md:text-right">
                     <h5 class="text-lg font-bold text-white mb-6">Resta in Contatto</h5>
                     <p class="text-gray-400 text-sm mb-2">Hai domande? Scrivici a:</p>
-                    <a href="mailto:info@immobiliaris.it"
+                    <a href="mailto:immobiliarishelp@gmail.com"
                         class="text-my-orange font-semibold hover:text-white transition-colors mb-6 inline-block">
-                        info@immobiliaris.it
+                        immobiliarishelp@gmail.com
                     </a>
 
                     <div class="flex justify-start md:justify-end gap-4 mt-4">
