--- a/immobiliaris-be/src/main/resources/static/account.html
+++ b/immobiliaris-be/src/main/resources/static/account.html
@@ -47,18 +47,18 @@
     <main class="flex-1 p-6 lg:p-12 overflow-y-auto h-screen">
       
       <div class="flex justify-between items-center mb-8">
-        <div>
+        <div class="w-full">
           <h1 class="text-3xl font-bold text-my-green-dark">Benvenuto</h1>
-          <p class="text-gray-600">Ecco il riepilogo delle tue attività immobiliari.</p>
+          <p class="text-gray-600 border-b-2 pb-4">Ecco il riepilogo delle tue attività immobiliari.</p>
         </div>
-        <a href="index.html" class="flex items-center text-sm font-semibold text-gray-500 hover:text-my-orange transition-colors">
+        <a href="index.html" class="flex items-center text-sm font-semibold text-gray-500 hover:text-my-orange transition-colors whitespace-nowrap flex-shrink-0">
             <svg class="w-4 h-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" /></svg>
             Torna alla Home
         </a>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-10">
-         <div class="bg-white p-6 rounded-xl shadow-sm border border-gray-100 flex items-center">
+         <div class="bg-gray-50 p-6 rounded-xl shadow-lg border border-gray-100 flex items-center">
             <div class="p-3 rounded-full bg-blue-50 text-blue-600 mr-4">
                 <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
             </div>
@@ -70,20 +70,26 @@
          </div>
 
       <div class="mb-10">
-        <h2 class="text-xl font-bold text-my-black mb-6 flex items-center">
-            <svg class="w-5 h-5 mr-2 text-my-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
-            Ultime Valutazioni
-        </h2>
+        <div class="w-full">
+          <h2 class="text-xl font-bold text-my-black flex items-center">
+              <svg class="w-5 h-5 mr-2 text-my-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+              Ultime Valutazioni
+          </h2>
+          <p class="text-gray-600 border-b-2 pb-4 mb-4">Qui puoi vedere lo stato delle tue valutazioni recenti.</p>
+        </div>
         <div id="valutazioni-container" class="space-y-4">
             <p class="text-gray-500">Caricamento valutazioni...</p>
         </div>
       </div>
 
       <div>
-        <h2 class="text-xl font-bold text-my-black mb-6 flex items-center">
-            <svg class="w-5 h-5 mr-2 text-my-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
-            Immobili Censiti
-        </h2>
+        <div class="w-full">
+          <h2 class="text-xl font-bold text-my-black flex items-center">
+              <span class="text-xl opacity-20">🏠</span>
+              Immobili Censiti
+          </h2>
+          <p class="text-gray-600 border-b-2 pb-4 mb-4">Qui puoi vedere i tuoi immobili sottoposti a valutazione.</p>
+        </div>
         <div id="immobili-container" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
             <p class="text-gray-500">Caricamento immobili...</p>
         </div>
