--- a/immobiliaris-be/src/main/resources/static/account.html
+++ b/immobiliaris-be/src/main/resources/static/account.html
@@ -63,7 +63,7 @@
                 <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
             </div>
             <div>
-                <p class="text-sm text-gray-500">Valutazioni Totali</p>
+                <p class="text-sm text-gray-600">Valutazioni Totali</p>
                 <p class="text-xl font-bold text-my-black" id="total-val-count">-</p>
             </div>
          </div>
@@ -71,7 +71,7 @@
 
       <div class="mb-10">
         <div class="w-full">
-          <h2 class="text-xl font-bold text-my-black flex items-center">
+          <h2 class="text-2xl font-bold text-my-black flex items-center">
               <svg class="w-5 h-5 mr-2 text-my-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
               Ultime Valutazioni
           </h2>
@@ -84,8 +84,8 @@
 
       <div>
         <div class="w-full">
-          <h2 class="text-xl font-bold text-my-black flex items-center">
-              <span class="text-xl opacity-20">🏠</span>
+          <h2 class="text-2xl font-bold text-my-black flex items-center">
+              <span class="opacity-20">🏠</span>
               Immobili Censiti
           </h2>
           <p class="text-gray-600 border-b-2 pb-4 mb-4">Qui puoi vedere i tuoi immobili sottoposti a valutazione.</p>
