--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -494,11 +494,16 @@
 
                 </div>
 
-                <!-- pagination / nav (kept outside slides) -->
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
             </div>
+            <!-- Pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- Pulsanti centrati verticalmente e a 20px dalle cards -->
+            <div class="swiper-button-next !absolute !top-1/2 !-translate-y-1/2 right-[20px]"></div>
+            <div class="swiper-button-prev !absolute !top-1/2 !-translate-y-1/2 left-[20px]"></div>
+
+
+
         </div>
     </section>
 
@@ -724,15 +729,16 @@
                         <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Home</a></li>
                         <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Servizi</a>
                         </li>
-                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Valutazione gratuita</a>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Valutazione
+                                gratuita</a>
                         </li>
-                        <li><a href="#"
-                                class="text-gray-300 hover:text-my-orange transition duration-150">Chi siamo</a>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Chi siamo</a>
                         </li>
                         <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Contatti</a>
                         </li>
                         </li>
-                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Privacy & Cookie Policy</a>
+                        <li><a href="#" class="text-gray-300 hover:text-my-orange transition duration-150">Privacy &
+                                Cookie Policy</a>
                         </li>
                     </ul>
                 </div>
