fix: update contact email and improve admin page functionality
- Changed contact email from info@immobiliaris.it to immobiliarishelp@gmail.com in index.html.
- Refactored admin.js for better readability and structure, including consistent indentation and improved event listener setup.
- Enhanced sidebar navigation to highlight active links and improve user experience.
- Updated rendering functions for immobili, valutazioni, utenti, and contratti to streamline code and improve maintainability.
- Modified login.html to replace placeholder logo with actual logo image for better branding.

--- a/immobiliaris-be/src/main/resources/static/admin.html
+++ b/immobiliaris-be/src/main/resources/static/admin.html
@@ -79,7 +79,7 @@
 
         <div class="flex flex-1 lg:flex-row">
 
-        <aside id="sidebar" class="bg-my-cream text-my-black w-full lg:w-72 flex-shrink-0 shadow-2xl z-20 hidden lg:flex lg:flex-col self-stretch">
+        <aside id="sidebar" class="bg-my-cream text-my-black w-full lg:w-72 flex-shrink-0 shadow-2xl z-20 flex flex-col self-stretch">
             
             <div class="p-8 flex flex-col items-center border-b border-gray-200">
                 <div class="w-20 h-20 bg-my-green-dark rounded-xl flex items-center justify-center text-3xl font-bold text-white shadow-lg mb-4">
@@ -90,24 +90,24 @@
             </div>
 
             <nav class="flex-1 px-4 py-6 space-y-2">
-                <a href="#" class="flex items-center px-4 py-3 text-my-green-dark font-semibold bg-white/20 rounded-lg transition-colors group">
-                    <span class="w-8 h-8 rounded-lg bg-my-green-dark flex items-center justify-center mr-3 text-white transition-all">📊</span>
+                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors">
+                    <svg class="w-5 h-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
                     Dashboard
                 </a>
-                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors group">
-                    <span class="w-8 h-8 rounded-lg bg-gray-100 flex items-center justify-center mr-3 group-hover:bg-my-green-dark group-hover:text-white transition-all">👥</span>
+                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors">
+                    <svg class="w-5 h-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
                     Utenti & Venditori
                 </a>
-                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors group">
-                    <span class="w-8 h-8 rounded-lg bg-gray-100 flex items-center justify-center mr-3 group-hover:bg-my-green-dark group-hover:text-white transition-all">🏠</span>
+                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors">
+                    <svg class="w-5 h-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
                     Immobili
                 </a>
-                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors group">
-                    <span class="w-8 h-8 rounded-lg bg-gray-100 flex items-center justify-center mr-3 group-hover:bg-my-green-dark group-hover:text-white transition-all">📈</span>
+                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors">
+                    <svg class="w-5 h-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 7h6m0 10v-3m-3 3h.01M9 17h.01M9 14h.01M12 14h.01M15 11h.01M12 11h.01M9 11h.01M7 21h10a2 2 0 002-2V5a2 2 0 00-2-2H7a2 2 0 00-2 2v14a2 2 0 002 2z" /></svg>
                     Valutazioni
                 </a>
-                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors group">
-                    <span class="w-8 h-8 rounded-lg bg-gray-100 flex items-center justify-center mr-3 group-hover:bg-my-green-dark group-hover:text-white transition-all">📄</span>
+                <a href="#" class="flex items-center px-4 py-3 text-my-black hover:bg-gray-100 hover:font-semibold rounded-lg transition-colors">
+                    <svg class="w-5 h-5 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
                     Contratti
                 </a>
             </nav>
@@ -128,9 +128,7 @@
                 <div class="px-4 sm:px-6 lg:px-8">
                     <div class="flex justify-between items-center h-20">
                         <a href="index.html" class="flex items-center gap-2 group">
-                            <div class="w-10 h-10 bg-my-orange rounded-lg flex items-center justify-center font-bold text-xl text-white shadow-md group-hover:rotate-3 transition-transform">
-                                I
-                            </div>
+                            <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
                             <span class="text-2xl font-bold tracking-tight text-my-green-dark">Immobiliaris</span>
                         </a>
                         <div class="flex items-center gap-2 px-4 py-2 bg-my-green-dark/5 rounded-lg">
@@ -386,9 +384,7 @@
 
                 <div class="space-y-4">
                     <div class="flex items-center gap-2 mb-4">
-                        <div
-                            class="w-10 h-10 bg-my-orange rounded-lg flex items-center justify-center font-bold text-xl text-white shadow-lg">
-                            I</div>
+                        <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
                         <span class="text-2xl font-bold tracking-tight">Immobiliaris</span>
                     </div>
                     <p class="text-gray-400 leading-relaxed text-sm">
