--- a/immobiliaris-be/src/main/resources/static/login.html
+++ b/immobiliaris-be/src/main/resources/static/login.html
@@ -71,10 +71,8 @@
 
   <nav class="bg-white shadow-sm sticky top-0 z-50 border-b border-gray-100">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-20"> <a href="#" class="flex items-center gap-2 group">
-          <div
-            class="w-10 h-10 bg-my-orange rounded-lg flex items-center justify-center font-bold text-xl text-white shadow-md group-hover:rotate-3 transition-transform">
-            I</div>
+      <div class="flex justify-between items-center h-20"> <a href="index.html" class="flex items-center gap-2 group">
+          <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
           <span class="text-2xl font-bold tracking-tight text-my-green-dark">Immobiliaris</span>
         </a>
 
@@ -190,9 +188,7 @@
 
         <div class="space-y-4">
           <div class="flex items-center gap-2 mb-4">
-            <div
-              class="w-10 h-10 bg-my-orange rounded-lg flex items-center justify-center font-bold text-xl text-white shadow-lg">
-              I</div>
+            <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
             <span class="text-2xl font-bold tracking-tight">Immobiliaris</span>
           </div>
           <p class="text-gray-400 leading-relaxed text-sm">
