--- a/immobiliaris-be/src/main/resources/static/account.html
+++ b/immobiliaris-be/src/main/resources/static/account.html
@@ -84,9 +84,7 @@
         <div class="px-4 sm:px-6 lg:px-8">
           <div class="flex justify-between items-center h-20">
             <a href="index.html" class="flex items-center gap-2 group">
-              <div class="w-10 h-10 bg-my-orange rounded-lg flex items-center justify-center font-bold text-xl text-white shadow-md group-hover:rotate-3 transition-transform">
-                I
-              </div>
+              <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
               <span class="text-2xl font-bold tracking-tight text-my-green-dark">Immobiliaris</span>
             </a>
             <div class="flex items-center gap-2 px-4 py-2 bg-my-green-dark/5 rounded-lg">
@@ -154,7 +152,7 @@
 
           <div class="space-y-4">
             <div class="flex items-center gap-2 mb-4">
-              <div class="w-10 h-10 bg-my-orange rounded-lg flex items-center justify-center font-bold text-xl text-white shadow-lg">I</div>
+              <img src="./assets/logo.svg" alt="Immobiliaris Logo" class="h-10 w-10 object-contain" />
               <span class="text-2xl font-bold tracking-tight">Immobiliaris</span>
             </div>
             <p class="text-gray-400 leading-relaxed text-sm">
