fix: update navigation links to point to the correct sections in HTML files

--- a/immobiliaris-be/src/main/resources/static/login.html
+++ b/immobiliaris-be/src/main/resources/static/login.html
@@ -201,22 +201,22 @@
           <h5 class="text-lg font-bold text-white mb-6">Navigazione Veloce</h5>
           <ul class="space-y-3 text-sm">
             <li>
-              <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+              <a href="index.html" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                 <span class="mr-2">›</span> Home
               </a>
             </li>
             <li>
-              <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+              <a href="index.html#servizi" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                 <span class="mr-2">›</span> I Nostri Servizi
               </a>
             </li>
             <li>
-              <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+              <a href="index.html#approfondimento" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                 <span class="mr-2">›</span> Vantaggi
               </a>
             </li>
             <li>
-              <a href="#" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
+              <a href="index.html#contatti" class="text-gray-400 hover:text-my-orange transition-colors duration-200 flex items-center">
                 <span class="mr-2">›</span> Contattaci
               </a>
             </li>
