--- a/immobiliaris-be/src/main/resources/static/index.html
+++ b/immobiliaris-be/src/main/resources/static/index.html
@@ -132,7 +132,7 @@
 
 
 
-    <section class="bg-my-cream md:py-24">
+    <section class="bg-white md:py-24">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-8 md:gap-12">
 
@@ -675,7 +675,7 @@
         </div>
     </section>
 
-    <section id="servizi" class="bg-my-cream py-16">
+    <section id="servizi" class="bg-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-bold mb-2 text-my-black">Cosa ottieni affidandoti a noi</h2>
             <p class="text-gray-600 mb-1">Lavoriamo nel settore immobiliare da più di 50 anni e abbiamo le soluzioni ai
@@ -712,7 +712,7 @@
     </section>
     
 
-    <section class="py-16 text-my-black bg-my-green-light/30 relative overflow-hidden">
+    <section class="py-16 text-my-black bg-my-cream relative overflow-hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-12">
                 <div class="relative z-10">
@@ -748,7 +748,7 @@
         
     </section>
 
-    <section id="approfondimento" class="py-20 bg-my-green-light/30 relative overflow-hidden pb-32">
+    <section id="approfondimento" class="py-20 bg-white relative overflow-hidden pb-32">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
 
         <div class="grid grid-cols-1 md:grid-cols-2 items-center gap-12 md:gap-16">
@@ -935,7 +935,7 @@
 
 
 
-    <section class="py-16 bg-my-cream">
+    <section class="py-16 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
             <div class="max-w-4xl mx-auto mb-12 text-left">
